k8s-cloud/keycloak-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      # serviceAccountName: keycloak-sa   # uncomment if using Workload Identity
      containers:
        - name: keycloak
          image: us-central1-docker.pkg.dev/tfm-kubernetes/tfm/keycloak:1.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: realm-export
              mountPath: /opt/keycloak/data/import/realm-export.json
              subPath: realm-export.json
            - name: realm-export
              mountPath: /opt/keycloak/data/import
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: realm-export
          configMap:
            name: keycloak-realm
      # imagePullSecrets:
      #   - name: ar-pull
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - name: http
      port: 80
      targetPort: 8080
