k8s-cloud/sshd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sshd
  labels:
    app: sshd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sshd
  template:
    metadata:
      labels:
        app: sshd
    spec:
      containers:
        - name: sshd
          image: linuxserver/openssh-server:latest
          ports:
            - containerPort: 2222
          readinessProbe:
            tcpSocket:
              port: 2222
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 2222
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: sshd
spec:
  selector:
    app: sshd
  ports:
    - name: ssh
      port: 2222
      targetPort: 2222
